# clash-verge-service-ipc

./: .gitignore  Cargo.toml  Makefile  TODO.md  renovate.json
.github/build-for-linux/: action.yml  build.sh
.github/workflows/: clippy.yml  full-tests.yml  release.yml  service-integration.yml  service-recovery.yml
resources/: info.plist.tmpl  installer.nsi  launchd.plist.tmpl  rc_d_service.tmpl  systemd_service_unit.tmpl
scripts/: linux_afterbuild.sh  mihomo.sh
src/: channel.rs  lib.rs  main.rs
src/cli/: install.rs  mod.rs  run.rs  uninstall.rs
src/client/: mod.rs  windows_identity.rs
src/core/: assets.rs  atomic_file.rs  auth.rs  command.rs  desired.rs  ipc.rs  legacy_cleanup.rs  logger.rs  maintenance.rs  manager.rs  mod.rs  owner.rs  paths.rs  permission.rs  process.rs  proxy.rs  reconcile.rs  repair.rs  runtime.rs  server.rs  state.rs  status.rs  structure.rs  test_credentials.rs  unix_security.rs  windows_legacy_cleanup.rs  windows_security.rs
tests/: common.rs  test_cli_usage.rs  test_ipc_server.rs  test_mihomo_start.rs  test_owner_lifecycle.rs  test_proxy_lifecycle.rs  test_reliability.rs  test_start_and_parse.rs  test_start_and_stop.rs  test_start_from_start.rs  test_start_permissions.rs
