[package]
name = "clash-verge-service-ipc"
version = "0.1.0"
edition = "2024"
authors = ["Tunglies"]
license = "GPL-3.0"

[lib]
name = "clash_verge_service_ipc"
path = "src/lib.rs"

[[bin]]
name = "clash-verge-service-ipc"
path = "src/main.rs"
required-features = ["standalone"]

[features]
standalone = [
    "kode-bridge",
    "http",
    "tracing",
    "tracing-subscriber",
    "tokio",
    "anyhow",
    "once_cell",
]
default = []


[dependencies]
kode-bridge = { version = "0.2.1", features = ["server"], optional = true }
once_cell = { version = "1.21.3", features = ["parking_lot"], optional = true }
anyhow = { version = "1.0.100", optional = true }
http = { version = "1.3.1", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.143", optional = true }
strum = { version = "0.27.2", optional = false }
strum_macros = { version = "0.27.2", optional = false }
tokio = { version = "1.47.1", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }

[dev-dependencies]
kode-bridge = { version = "0.2.1", default-features = false, features = [
    "server",
    "client",
] }
serial_test = "3.2.0"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = 3
codegen-units = 1
