[package]
name = "clash_verge_service_ipc"
version = "2.0.29"
edition = "2024"
authors = ["Tunglies"]
license = "GPL-3.0"

[lib]
name = "clash_verge_service_ipc"
path = "src/lib.rs"

[[bin]]
name = "clash-verge-service"
path = "src/bin/service.rs"
required-features = ["standalone"]

[[bin]]
name = "clash-verge-service-install"
path = "src/bin/install_service.rs"
required-features = ["standalone"]

[[bin]]
name = "clash-verge-service-uninstall"
path = "src/bin/uninstall_service.rs"
required-features = ["standalone"]

[[bin]]
name = "mock_binary"
path = "src/bin/mock_binary.rs"
required-features = ["test"]

[features]
standalone = [
    "kode-bridge",
    "http",
    "tracing",
    "tracing-subscriber",
    "tokio",
    "anyhow",
    "once_cell",
    "serde_json",
    "clash_verge_logger",
    "flexi_logger",
    "log",
    "response",
    "dep:platform_lib",
    "dep:nix",
    "compact_str",
]
client = [
    "kode-bridge/client",
    "anyhow",
    "log",
    "tokio",
    "once_cell",
    "serde_json",
    "response",
    "compact_str",
]
response = []
test = [
    "flexi_logger",
    "tracing",
    "tracing-subscriber/env-filter",
    "tracing-log",
]
default = []


[dependencies]
kode-bridge = { version = "0.3.5", features = ["server"], optional = true }
once_cell = { version = "1.21.3", features = ["parking_lot"], optional = true }
anyhow = { version = "1.0.100", optional = true }
http = { version = "1.3.1", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = false }
serde_json = { version = "1.0.143", optional = true }
strum = { version = "0.27.2", optional = false }
strum_macros = { version = "0.27.2", optional = false }
tokio = { version = "1.47.1", features = [
    "process",
    "io-util",
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
], optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
clash_verge_logger = { git = "https://github.com/clash-verge-rev/clash-verge-logger.git", version = "0.2.0", optional = true }
flexi_logger = { version = "0.31.7", optional = true }
log = { version = "0.4.28", optional = true }
tracing-log = { version = "0.2.0", optional = true }
compact_str = { version = "0.9.0", features = ["serde"], optional = true }

[target.'cfg(unix)'.dependencies]
platform_lib = { package = "libc", version = "0.2.177", optional = true }
nix = { version = "0.30.1", features = ["user"], optional = true }

[target.'cfg(windows)'.dependencies]
platform_lib = { package = "windows-service", version = "0.8.0", optional = true }

[dev-dependencies]
kode-bridge = { version = "0.3.4", default-features = false, features = [
    "server",
    "client",
] }
serial_test = "3.2.0"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = 3
codegen-units = 1
